[gd_scene load_steps=5 format=3 uid="uid://cocifaog2uwan"]

[ext_resource type="Script" uid="uid://dw7bp8wf3hww" path="res://scripts/item_ui.gd" id="1_uxw8f"]
[ext_resource type="PackedScene" uid="uid://cs2n2kwti0h3a" path="res://components/cooldown_component.tscn" id="2_e4hfn"]
[ext_resource type="Texture2D" uid="uid://dj5wgqsgxe0wu" path="res://assets/items/sword.png" id="2_jocyr"]
[ext_resource type="Script" uid="uid://c4dmoi0rijtf2" path="res://components/drag_and_drop.gd" id="4_vljjh"]

[node name="ItemUI" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 67.0
offset_bottom = 100.0
pivot_offset = Vector2(50, 50)
script = ExtResource("1_uxw8f")

[node name="ItemName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Cool Hammer"

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_jocyr")
expand_mode = 1

[node name="CooldownProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 8
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CooldownComponent" parent="." instance=ExtResource("2_e4hfn")]
base_cooldown = 4.0

[node name="DragAndDropComponent" type="Node" parent="." node_paths=PackedStringArray("target")]
unique_name_in_owner = true
script = ExtResource("4_vljjh")
target = NodePath("..")
